--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,16 @@ services:
     build: .
     container_name: wallet-app
     ports:
-      - "8080:8080"
+      - "9090:9090"
     depends_on:
       - db
+      - redis
     environment:
       - SPRING_DATASOURCE_URL=${SPRING_DATASOURCE_URL}
       - SPRING_DATASOURCE_USERNAME=${SPRING_DATASOURCE_USERNAME}
       - SPRING_DATASOURCE_PASSWORD=${SPRING_DATASOURCE_PASSWORD}
+      - SPRING_REDIS_HOST=redis
+      - SPRING_REDIS_PORT=6379
     networks:
       - wallet-network
     healthcheck:
@@ -37,6 +40,19 @@ services:
       timeout: 5s
       retries: 5
 
+  redis:  # Добавлен сервис redis
+    image: redis:latest
+    container_name: wallet-redis
+    ports:
+      - "6379:6379"
+    networks:
+      - wallet-network
+    healthcheck:
+      test: ["CMD-SHELL", "redis-cli ping || exit 1"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
   wallet-db-data:
     driver: local
@@ -44,3 +60,4 @@ volumes:
 networks:
   wallet-network:
     driver: bridge
+
